las otras cartas

--- a/trabajo2/vista.HTML
+++ b/trabajo2/vista.HTML
@@ -82,22 +82,71 @@
         <div class="card--container">
             <h3 class=" main--title"> Today's data </h3>
             <div class="card--wrapper">
-                <div class=" payment--card">
+                <div class=" payment--card
+                light-red">
                     <div class="card--header">
-                        <div class= "anmount">
+                        <div class="amount">
                             <spam class="title">
                                 Payment amount </spam>
-                            <span class="value"> $ 500.00 </span>    
+                            <span class="amount--value">
+                                $ 500.00 </span>
                         </div>
                         <i class="fas fa-dollar-sign icon"></i>
                     </div>
-                    <spam class="card-details">**** **** **** 
+                    <spam class="card-details">**** **** ****
                         3484</spam>
+                    </spam>
+                </div>
+                <div class=" payment--card
+                light-purple">
+                    <div class="card--header">
+                        <div class="amount">
+                            <spam class="title">
+                                Payment amount </spam>
+                            <span class="amount--value">
+                                $ 200.00 </span>
+                        </div>
+                        <i class="fas fa-list icon
+                        dark-purple"></i>
+                    </div>
+                    <spam class="card-details">**** **** ****
+                        5542</spam>
+                    </spam>
+                </div>
+                <div class=" payment--card
+                light-green">
+                    <div class="card--header">
+                        <div class="amount">
+                            <spam class="title">
+                                Payment amount </spam>
+                            <span class="amount--value">
+                                $ 350.00 </span>
+                        </div>
+                        <i class="fas fa-users icon
+                        dark-green"></i>
+                    </div>
+                    <spam class="card-details">**** **** ****
+                        8896</spam>
+                    </spam>
+                </div>
+                <div class=" payment--card
+                light-blue">
+                    <div class="card--header">
+                        <div class="amount">
+                            <spam class="title">
+                                Payment amount </spam>
+                            <span class="amount--value">
+                                $ 150.00 </span>
+                        </div>
+                        <i class="fas fa-check icon
+                        dark-blue"></i>
+                    </div>
+                    <spam class="card-details">**** **** ****
+                        7745</spam>
                     </spam>
                 </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
