--- a/trabajo2/vista.HTML
+++ b/trabajo2/vista.HTML
@@ -147,6 +147,58 @@
                 </div>
             </div>
         </div>
+        <div class="tabular--wrapper">
+            <h3 class=" "main--content"> Finance data</h3>
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th> Date</th>
+                            <th> Transaction  Type</th>
+                            <th> Descriptions</th>
+                            <th> Amount</th>
+                            <th> Category</th>
+                            <th> Status</th>
+                            <th> Action</th>
+                        </tr>
+                        <tbody>
+                            <tr>
+                                <td>2023-05-01</td>
+                                <td>Expense</td>
+                                <td>Ofisse Suplies</td>
+                                <td>$250</td>
+                                <td>Oficce Expense</td>
+                                <td>pending</td>
+                                <td><buttom> Edit</buttom></td>
+                            </tr>
+                            <tr>
+                                <td>2023-05-01</td>
+                                <td>Expense</td>
+                                <td>Ofisse Suplies</td>
+                                <td>$250</td>
+                                <td>Oficce Expense</td>
+                                <td>pending</td>
+                                <td><buttom> Edit</buttom></td>
+                            </tr>
+                            <tr>
+                                <td>2023-05-01</td>
+                                <td>Expense</td>
+                                <td>Ofisse Suplies</td>
+                                <td>$250</td>
+                                <td>Oficce Expense</td>
+                                <td>pending</td>
+                                <td><buttom> Edit</buttom></td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="7"> TOTAL: $1,000 </td>
+                            </tr>
+                        </tfoot>
+                    </thead>
+                </table>
+            </div>
+        </div>
 </body>
 
 </html>
